refactor(ondemand): create streamlined self-contained prompts for docker-containerization