@@ -1,163 +1,166 @@
-# Docker Containerization Process - Java
+# Java Docker Containerization - Copy This Prompt
 
-> **Purpose**: Containerize Java applications with Docker for consistent deployments
-
-> **Key Points**: Multi-stage build, Eclipse Temurin/Azul Zulu base images, non-root user, JRE vs JDK
+> **Type**: One-time setup process  
+> **When to use**: Dockerizing Java application  
+> **Instructions**: Copy the complete prompt below and paste into your AI tool
 
 ---
 
-## Phase 1: Basic Dockerfile
+## 📋 Complete Self-Contained Prompt
 
-> **ALWAYS use**: Multi-stage build (Maven/Gradle + JDK → JRE)
-> **NEVER**: Use `latest` tag, include full JDK in runtime, run as root
+```
+========================================
+JAVA DOCKER CONTAINERIZATION
+========================================
 
-**Dockerfile (Maven)**:
+CONTEXT:
+You are creating Docker container for a Java application.
+
+CRITICAL REQUIREMENTS:
+- ALWAYS use multi-stage builds
+- ALWAYS use official OpenJDK/Eclipse Temurin images
+- NEVER include source files in production image
+- Use .dockerignore to exclude build artifacts
+
+========================================
+PHASE 1 - CREATE DOCKERFILE
+========================================
+
+For Maven:
+
 ```dockerfile
-FROM maven:3.9-eclipse-temurin-21 AS build
+# Build stage
+FROM maven:3.9-eclipse-temurin-17 AS build
 WORKDIR /app
+
 COPY pom.xml .
 RUN mvn dependency:go-offline
-COPY src ./src
-RUN mvn package -DskipTests
 
-FROM eclipse-temurin:21-jre-alpine
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# Runtime stage
+FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
-RUN addgroup -g 1001 spring && adduser -u 1001 -G spring -s /bin/sh -D spring
-COPY --from=build --chown=spring:spring /app/target/*.jar app.jar
-USER spring
+
+COPY --from=build /app/target/*.jar app.jar
+
 EXPOSE 8080
-HEALTHCHECK CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
 ENTRYPOINT ["java", "-jar", "app.jar"]
 ```
 
-**.dockerignore**:
+For Gradle:
+
+```dockerfile
+# Build stage
+FROM gradle:8-jdk17 AS build
+WORKDIR /app
+
+COPY build.gradle settings.gradle ./
+RUN gradle dependencies --no-daemon
+
+COPY src ./src
+RUN gradle bootJar --no-daemon
+
+# Runtime stage
+FROM eclipse-temurin:17-jre-alpine
+WORKDIR /app
+
+COPY --from=build /app/build/libs/*.jar app.jar
+
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
+```
+
+Create .dockerignore:
 ```
 target/
+build/
+.gradle/
 .mvn/
+.git/
 *.log
-.git
+.idea/
+*.iml
+.settings/
+.classpath
+.project
 ```
 
-> **Git**: `git commit -m "feat: add Docker containerization"`
+Deliverable: Working Dockerfile
 
----
+========================================
+PHASE 2 - BUILD AND TEST
+========================================
 
-## Phase 2: Docker Compose
+Build and test locally:
 
-**docker-compose.yml**:
-```yaml
-services:
-  app:
-    build: .
-    ports:
-      - "8080:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=dev
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/myapp
-    depends_on:
-      - db
+```bash
+# Build
+docker build -t my-java-app:latest .
 
-  db:
-    image: postgres:15-alpine
-    environment:
-      - POSTGRES_DB=myapp
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+# Run
+docker run -p 8080:8080 my-java-app:latest
 
-volumes:
-  postgres_data:
+# Test
+curl http://localhost:8080
 ```
 
-> **Git**: `git commit -m "feat: add docker-compose"`
+Deliverable: Working container locally
 
----
+========================================
+PHASE 3 - OPTIMIZE
+========================================
 
-## Phase 3: Production Optimizations
-
-> **ALWAYS**:
-> - Use JRE (not JDK) for runtime
-> - Use Alpine for smaller images
-> - Add JVM memory flags: `-Xmx512m -Xms256m`
-> - Use Jib for layered builds (alternative)
-
-**JVM Flags**:
+Add health check:
 ```dockerfile
-ENTRYPOINT ["java", "-Xmx512m", "-Xms256m", "-jar", "app.jar"]
+HEALTHCHECK --interval=30s --timeout=3s \
+  CMD curl -f http://localhost:8080/actuator/health || exit 1
 ```
 
-> **Git**: `git commit -m "feat: optimize Dockerfile"`
+Optimize JVM settings:
+```dockerfile
+ENTRYPOINT ["java", \
+  "-XX:+UseContainerSupport", \
+  "-XX:MaxRAMPercentage=75.0", \
+  "-XX:+UseG1GC", \
+  "-jar", "app.jar"]
+```
+
+Use JLink for custom JRE (smaller image):
+```dockerfile
+RUN jlink --add-modules $(jdeps --print-module-deps app.jar) \
+  --output /jre --strip-debug --no-man-pages --no-header-files
+```
+
+Deliverable: Optimized production image
+
+========================================
+BEST PRACTICES
+========================================
+
+- Use multi-stage builds (smaller images)
+- Copy pom.xml/build.gradle first (better caching)
+- Use Eclipse Temurin images
+- Add health checks
+- Optimize JVM settings for containers
+- Use .dockerignore
+- Tag images with versions
+
+========================================
+EXECUTION
+========================================
+
+START: Create Dockerfile (Phase 1)
+CONTINUE: Build and test (Phase 2)
+OPTIONAL: Optimize (Phase 3)
+REMEMBER: Multi-stage builds, JVM optimization
+```
 
 ---
 
-## Phase 4: CI/CD Integration
+## Quick Reference
 
-**GitHub Actions**: Build, tag, push to registry
-
-> **Git**: `git commit -m "feat: add Docker build to CI/CD"`
-
----
-
-## AI Self-Check
-
-- [ ] Multi-stage Dockerfile
-- [ ] JRE runtime (not JDK)
-- [ ] Non-root user
-- [ ] .dockerignore configured
-- [ ] docker-compose.yml created
-- [ ] Health check added
-- [ ] Image size <200MB
-- [ ] Security scan passes
-
----
-
-**Process Complete** ✅
-
-
-## Usage - Copy This Complete Prompt
-
-> **Type**: One-time setup process (multi-phase)  
-> **When to use**: When containerizing application with Docker
-
-### Complete Implementation Prompt
-
-```
-CONTEXT:
-You are containerizing this application with Docker.
-
-CRITICAL REQUIREMENTS:
-- ALWAYS detect language version from project files
-- ALWAYS use multi-stage builds (separate build and runtime)
-- ALWAYS use specific version tags (never :latest in production)
-- ALWAYS run as non-root user for security
-- NEVER include secrets in Docker images
-
-IMPLEMENTATION PHASES:
-
-PHASE 1 - DOCKERFILE:
-1. Detect language version
-2. Create Dockerfile with multi-stage build:
-   - Build stage: Install dependencies, compile
-   - Runtime stage: Copy artifacts, minimal runtime
-3. Configure non-root user
-4. Optimize layer caching
-
-Deliverable: Optimized Dockerfile
-
-PHASE 2 - DOCKER COMPOSE:
-1. Create docker-compose.yml for local development
-2. Configure services (app, database, cache, etc.)
-3. Set up volumes for persistence
-4. Configure networking
-
-Deliverable: Local Docker environment
-
-PHASE 3 - CI/CD INTEGRATION:
-1. Build Docker image in CI pipeline
-2. Tag with version/commit SHA
-3. Push to container registry
-4. Scan for vulnerabilities
-
-Deliverable: Automated Docker builds
-
-START: Detect language version, create multi-stage Dockerfile.
-```
+**What you get**: Production-ready Java Docker container  
+**Time**: 1 hour  
+**Output**: Dockerfile, .dockerignore
